# themis

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  vercel.json
api/: build.py  index.py
migrations/versions/: 49dedf0f4e6b_last_transaction.py  73f4f1776f9c_initial_migration.py  8a5f0be630ee_montant_dans_compte.py
themis/: __init__.py  extensions.py
themis/banque/: __init__.py  routes.py
themis/banque/forms/: compte.py
themis/banque/models/: compte.py  transaction.py
themis/main/: __init__.py  routes.py
themis/main/forms/: login.py  register.py
themis/models/: communaute.py  personne.py
themis/static/assets/css/: material-dashboard.css  material-dashboard.css.map  material-dashboard.min.css
themis/static/assets/js/: material-dashboard.js
themis/templates/: auth.html  master.html  moi.html
themis/templates/auth/: login.html  register.html
themis/templates/banque/: index.html  transaction.html
themis/templates/home/: tables.html
themis/templates/includes/: flash.html  footer-fullscreen.html  footer.html  navigation-fullscreen.html  navigation.html  sidebar.html
themis/templates/layouts/: base-fullscreen.html  base.html
themis/templates/macros/: form.html
themis/templates/main/: moi.html
