[tool.poetry]
name = "themis"
version = "0.1.0"
description = "Themis : outil de gestion micro-national"
authors = ["smwhr <ju@smwhr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.45"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"
wtforms = "^3.0.1"
werkzeug = "^2.2.2"
flask-migrate = "^4.0.0"
flask-wtf = "^1.0.1"
gunicorn = "^20.1.0"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
